make depend for 5.5.2.pre1

--- a/agent/helpers/Makefile.depend
+++ b/agent/helpers/Makefile.depend
@@ -33,6 +33,7 @@
 ./all_helpers.lo: ../../include/net-snmp/library/snmp_impl.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmp.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmp-tc.h
+./all_helpers.lo: ../../include/net-snmp/library/getopt.h
 ./all_helpers.lo: ../../include/net-snmp/utilities.h
 ./all_helpers.lo: ../../include/net-snmp/library/system.h
 ./all_helpers.lo: ../../include/net-snmp/library/tools.h
@@ -137,6 +138,7 @@
 ./baby_steps.lo: ../../include/net-snmp/library/snmp_impl.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmp.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmp-tc.h
+./baby_steps.lo: ../../include/net-snmp/library/getopt.h
 ./baby_steps.lo: ../../include/net-snmp/utilities.h
 ./baby_steps.lo: ../../include/net-snmp/library/system.h
 ./baby_steps.lo: ../../include/net-snmp/library/tools.h
@@ -240,6 +242,7 @@
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp_impl.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp-tc.h
+./bulk_to_next.lo: ../../include/net-snmp/library/getopt.h
 ./bulk_to_next.lo: ../../include/net-snmp/utilities.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/system.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/tools.h
@@ -343,6 +346,7 @@
 ./cache_handler.lo: ../../include/net-snmp/library/snmp_impl.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmp.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmp-tc.h
+./cache_handler.lo: ../../include/net-snmp/library/getopt.h
 ./cache_handler.lo: ../../include/net-snmp/utilities.h
 ./cache_handler.lo: ../../include/net-snmp/library/system.h
 ./cache_handler.lo: ../../include/net-snmp/library/tools.h
@@ -446,6 +450,7 @@
 ./debug_handler.lo: ../../include/net-snmp/library/snmp_impl.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmp.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmp-tc.h
+./debug_handler.lo: ../../include/net-snmp/library/getopt.h
 ./debug_handler.lo: ../../include/net-snmp/utilities.h
 ./debug_handler.lo: ../../include/net-snmp/library/system.h
 ./debug_handler.lo: ../../include/net-snmp/library/tools.h
@@ -549,6 +554,7 @@
 ./instance.lo: ../../include/net-snmp/library/snmp_impl.h
 ./instance.lo: ../../include/net-snmp/library/snmp.h
 ./instance.lo: ../../include/net-snmp/library/snmp-tc.h
+./instance.lo: ../../include/net-snmp/library/getopt.h
 ./instance.lo: ../../include/net-snmp/utilities.h
 ./instance.lo: ../../include/net-snmp/library/system.h
 ./instance.lo: ../../include/net-snmp/library/tools.h
@@ -652,6 +658,7 @@
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp_impl.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp-tc.h
+./mode_end_call.lo: ../../include/net-snmp/library/getopt.h
 ./mode_end_call.lo: ../../include/net-snmp/utilities.h
 ./mode_end_call.lo: ../../include/net-snmp/library/system.h
 ./mode_end_call.lo: ../../include/net-snmp/library/tools.h
@@ -755,6 +762,7 @@
 ./multiplexer.lo: ../../include/net-snmp/library/snmp_impl.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmp.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmp-tc.h
+./multiplexer.lo: ../../include/net-snmp/library/getopt.h
 ./multiplexer.lo: ../../include/net-snmp/utilities.h
 ./multiplexer.lo: ../../include/net-snmp/library/system.h
 ./multiplexer.lo: ../../include/net-snmp/library/tools.h
@@ -858,6 +866,7 @@
 ./null.lo: ../../include/net-snmp/library/snmp_impl.h
 ./null.lo: ../../include/net-snmp/library/snmp.h
 ./null.lo: ../../include/net-snmp/library/snmp-tc.h
+./null.lo: ../../include/net-snmp/library/getopt.h
 ./null.lo: ../../include/net-snmp/utilities.h
 ./null.lo: ../../include/net-snmp/library/system.h
 ./null.lo: ../../include/net-snmp/library/tools.h
@@ -961,6 +970,7 @@
 ./old_api.lo: ../../include/net-snmp/library/snmp_impl.h
 ./old_api.lo: ../../include/net-snmp/library/snmp.h
 ./old_api.lo: ../../include/net-snmp/library/snmp-tc.h
+./old_api.lo: ../../include/net-snmp/library/getopt.h
 ./old_api.lo: ../../include/net-snmp/utilities.h
 ./old_api.lo: ../../include/net-snmp/library/system.h
 ./old_api.lo: ../../include/net-snmp/library/tools.h
@@ -1065,6 +1075,7 @@
 ./read_only.lo: ../../include/net-snmp/library/snmp_impl.h
 ./read_only.lo: ../../include/net-snmp/library/snmp.h
 ./read_only.lo: ../../include/net-snmp/library/snmp-tc.h
+./read_only.lo: ../../include/net-snmp/library/getopt.h
 ./read_only.lo: ../../include/net-snmp/utilities.h
 ./read_only.lo: ../../include/net-snmp/library/system.h
 ./read_only.lo: ../../include/net-snmp/library/tools.h
@@ -1168,6 +1179,7 @@
 ./row_merge.lo: ../../include/net-snmp/library/snmp_impl.h
 ./row_merge.lo: ../../include/net-snmp/library/snmp.h
 ./row_merge.lo: ../../include/net-snmp/library/snmp-tc.h
+./row_merge.lo: ../../include/net-snmp/library/getopt.h
 ./row_merge.lo: ../../include/net-snmp/utilities.h
 ./row_merge.lo: ../../include/net-snmp/library/system.h
 ./row_merge.lo: ../../include/net-snmp/library/tools.h
@@ -1271,6 +1283,7 @@
 ./scalar.lo: ../../include/net-snmp/library/snmp_impl.h
 ./scalar.lo: ../../include/net-snmp/library/snmp.h
 ./scalar.lo: ../../include/net-snmp/library/snmp-tc.h
+./scalar.lo: ../../include/net-snmp/library/getopt.h
 ./scalar.lo: ../../include/net-snmp/utilities.h
 ./scalar.lo: ../../include/net-snmp/library/system.h
 ./scalar.lo: ../../include/net-snmp/library/tools.h
@@ -1374,6 +1387,7 @@
 ./scalar_group.lo: ../../include/net-snmp/library/snmp_impl.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmp.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmp-tc.h
+./scalar_group.lo: ../../include/net-snmp/library/getopt.h
 ./scalar_group.lo: ../../include/net-snmp/utilities.h
 ./scalar_group.lo: ../../include/net-snmp/library/system.h
 ./scalar_group.lo: ../../include/net-snmp/library/tools.h
@@ -1477,6 +1491,7 @@
 ./serialize.lo: ../../include/net-snmp/library/snmp_impl.h
 ./serialize.lo: ../../include/net-snmp/library/snmp.h
 ./serialize.lo: ../../include/net-snmp/library/snmp-tc.h
+./serialize.lo: ../../include/net-snmp/library/getopt.h
 ./serialize.lo: ../../include/net-snmp/utilities.h
 ./serialize.lo: ../../include/net-snmp/library/system.h
 ./serialize.lo: ../../include/net-snmp/library/tools.h
@@ -1580,6 +1595,7 @@
 ./stash_cache.lo: ../../include/net-snmp/library/snmp_impl.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmp.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmp-tc.h
+./stash_cache.lo: ../../include/net-snmp/library/getopt.h
 ./stash_cache.lo: ../../include/net-snmp/utilities.h
 ./stash_cache.lo: ../../include/net-snmp/library/system.h
 ./stash_cache.lo: ../../include/net-snmp/library/tools.h
@@ -1685,6 +1701,7 @@
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp_impl.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp-tc.h
+./stash_to_next.lo: ../../include/net-snmp/library/getopt.h
 ./stash_to_next.lo: ../../include/net-snmp/utilities.h
 ./stash_to_next.lo: ../../include/net-snmp/library/system.h
 ./stash_to_next.lo: ../../include/net-snmp/library/tools.h
@@ -1790,6 +1807,7 @@
 ./table_array.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_array.lo: ../../include/net-snmp/library/snmp.h
 ./table_array.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_array.lo: ../../include/net-snmp/library/getopt.h
 ./table_array.lo: ../../include/net-snmp/utilities.h
 ./table_array.lo: ../../include/net-snmp/library/system.h
 ./table_array.lo: ../../include/net-snmp/library/tools.h
@@ -1893,6 +1911,7 @@
 ./table.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table.lo: ../../include/net-snmp/library/snmp.h
 ./table.lo: ../../include/net-snmp/library/snmp-tc.h
+./table.lo: ../../include/net-snmp/library/getopt.h
 ./table.lo: ../../include/net-snmp/utilities.h
 ./table.lo: ../../include/net-snmp/library/system.h
 ./table.lo: ../../include/net-snmp/library/tools.h
@@ -1996,6 +2015,7 @@
 ./table_container.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_container.lo: ../../include/net-snmp/library/snmp.h
 ./table_container.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_container.lo: ../../include/net-snmp/library/getopt.h
 ./table_container.lo: ../../include/net-snmp/utilities.h
 ./table_container.lo: ../../include/net-snmp/library/system.h
 ./table_container.lo: ../../include/net-snmp/library/tools.h
@@ -2099,6 +2119,7 @@
 ./table_data.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_data.lo: ../../include/net-snmp/library/snmp.h
 ./table_data.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_data.lo: ../../include/net-snmp/library/getopt.h
 ./table_data.lo: ../../include/net-snmp/utilities.h
 ./table_data.lo: ../../include/net-snmp/library/system.h
 ./table_data.lo: ../../include/net-snmp/library/tools.h
@@ -2202,6 +2223,7 @@
 ./table_dataset.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmp.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_dataset.lo: ../../include/net-snmp/library/getopt.h
 ./table_dataset.lo: ../../include/net-snmp/utilities.h
 ./table_dataset.lo: ../../include/net-snmp/library/system.h
 ./table_dataset.lo: ../../include/net-snmp/library/tools.h
@@ -2305,6 +2327,7 @@
 ./table_iterator.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmp.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_iterator.lo: ../../include/net-snmp/library/getopt.h
 ./table_iterator.lo: ../../include/net-snmp/utilities.h
 ./table_iterator.lo: ../../include/net-snmp/library/system.h
 ./table_iterator.lo: ../../include/net-snmp/library/tools.h
@@ -2409,6 +2432,7 @@
 ./table_row.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_row.lo: ../../include/net-snmp/library/snmp.h
 ./table_row.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_row.lo: ../../include/net-snmp/library/getopt.h
 ./table_row.lo: ../../include/net-snmp/utilities.h
 ./table_row.lo: ../../include/net-snmp/library/system.h
 ./table_row.lo: ../../include/net-snmp/library/tools.h
@@ -2512,6 +2536,7 @@
 ./table_tdata.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmp.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_tdata.lo: ../../include/net-snmp/library/getopt.h
 ./table_tdata.lo: ../../include/net-snmp/utilities.h
 ./table_tdata.lo: ../../include/net-snmp/library/system.h
 ./table_tdata.lo: ../../include/net-snmp/library/tools.h
@@ -2615,6 +2640,7 @@
 ./watcher.lo: ../../include/net-snmp/library/snmp_impl.h
 ./watcher.lo: ../../include/net-snmp/library/snmp.h
 ./watcher.lo: ../../include/net-snmp/library/snmp-tc.h
+./watcher.lo: ../../include/net-snmp/library/getopt.h
 ./watcher.lo: ../../include/net-snmp/utilities.h
 ./watcher.lo: ../../include/net-snmp/library/system.h
 ./watcher.lo: ../../include/net-snmp/library/tools.h
