--- a/agent/Makefile.depend
+++ b/agent/Makefile.depend
@@ -33,6 +33,7 @@
 ./agent_handler.lo: ../include/net-snmp/library/snmp_impl.h
 ./agent_handler.lo: ../include/net-snmp/library/snmp.h
 ./agent_handler.lo: ../include/net-snmp/library/snmp-tc.h
+./agent_handler.lo: ../include/net-snmp/library/getopt.h
 ./agent_handler.lo: ../include/net-snmp/utilities.h
 ./agent_handler.lo: ../include/net-snmp/library/system.h
 ./agent_handler.lo: ../include/net-snmp/library/tools.h
@@ -136,6 +137,7 @@
 ./agent_index.lo: ../include/net-snmp/library/snmp_impl.h
 ./agent_index.lo: ../include/net-snmp/library/snmp.h
 ./agent_index.lo: ../include/net-snmp/library/snmp-tc.h
+./agent_index.lo: ../include/net-snmp/library/getopt.h
 ./agent_index.lo: ../include/net-snmp/utilities.h
 ./agent_index.lo: ../include/net-snmp/library/system.h
 ./agent_index.lo: ../include/net-snmp/library/tools.h
@@ -390,6 +392,7 @@
 ./agent_read_config.lo: ../include/net-snmp/library/snmp_impl.h
 ./agent_read_config.lo: ../include/net-snmp/library/snmp.h
 ./agent_read_config.lo: ../include/net-snmp/library/snmp-tc.h
+./agent_read_config.lo: ../include/net-snmp/library/getopt.h
 ./agent_read_config.lo: ../include/net-snmp/utilities.h
 ./agent_read_config.lo: ../include/net-snmp/library/system.h
 ./agent_read_config.lo: ../include/net-snmp/library/tools.h
@@ -655,6 +658,7 @@
 ./agent_registry.lo: ../include/net-snmp/library/snmp_impl.h
 ./agent_registry.lo: ../include/net-snmp/library/snmp.h
 ./agent_registry.lo: ../include/net-snmp/library/snmp-tc.h
+./agent_registry.lo: ../include/net-snmp/library/getopt.h
 ./agent_registry.lo: ../include/net-snmp/utilities.h
 ./agent_registry.lo: ../include/net-snmp/library/system.h
 ./agent_registry.lo: ../include/net-snmp/library/tools.h
@@ -912,6 +916,7 @@
 ./agent_sysORTable.lo: ../include/net-snmp/library/snmp_impl.h
 ./agent_sysORTable.lo: ../include/net-snmp/library/snmp.h
 ./agent_sysORTable.lo: ../include/net-snmp/library/snmp-tc.h
+./agent_sysORTable.lo: ../include/net-snmp/library/getopt.h
 ./agent_sysORTable.lo: ../include/net-snmp/utilities.h
 ./agent_sysORTable.lo: ../include/net-snmp/library/system.h
 ./agent_sysORTable.lo: ../include/net-snmp/library/tools.h
@@ -1034,6 +1039,7 @@
 ./agent_trap.lo: ../include/net-snmp/library/snmp_assert.h
 ./agent_trap.lo: ../include/net-snmp/version.h
 ./agent_trap.lo: ../include/net-snmp/net-snmp-includes.h
+./agent_trap.lo: ../include/net-snmp/library/getopt.h
 ./agent_trap.lo: ../include/net-snmp/config_api.h
 ./agent_trap.lo: ../include/net-snmp/library/read_config.h
 ./agent_trap.lo: ../include/net-snmp/library/default_store.h
@@ -1134,6 +1140,7 @@
 ./mib_modules.lo: ../include/net-snmp/library/snmp_impl.h
 ./mib_modules.lo: ../include/net-snmp/library/snmp.h
 ./mib_modules.lo: ../include/net-snmp/library/snmp-tc.h
+./mib_modules.lo: ../include/net-snmp/library/getopt.h
 ./mib_modules.lo: ../include/net-snmp/utilities.h
 ./mib_modules.lo: ../include/net-snmp/library/system.h
 ./mib_modules.lo: ../include/net-snmp/library/tools.h
@@ -1386,6 +1393,7 @@
 ./object_monitor.lo: ../include/net-snmp/library/snmp_impl.h
 ./object_monitor.lo: ../include/net-snmp/library/snmp.h
 ./object_monitor.lo: ../include/net-snmp/library/snmp-tc.h
+./object_monitor.lo: ../include/net-snmp/library/getopt.h
 ./object_monitor.lo: ../include/net-snmp/utilities.h
 ./object_monitor.lo: ../include/net-snmp/library/system.h
 ./object_monitor.lo: ../include/net-snmp/library/tools.h
@@ -1490,6 +1498,7 @@
 ./snmp_agent.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmp_agent.lo: ../include/net-snmp/library/snmp.h
 ./snmp_agent.lo: ../include/net-snmp/library/snmp-tc.h
+./snmp_agent.lo: ../include/net-snmp/library/getopt.h
 ./snmp_agent.lo: ../include/net-snmp/utilities.h
 ./snmp_agent.lo: ../include/net-snmp/library/system.h
 ./snmp_agent.lo: ../include/net-snmp/library/tools.h
@@ -1594,6 +1603,7 @@
 ./snmpd.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpd.lo: ../include/net-snmp/library/snmp.h
 ./snmpd.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpd.lo: ../include/net-snmp/library/getopt.h
 ./snmpd.lo: ../include/net-snmp/utilities.h
 ./snmpd.lo: ../include/net-snmp/library/system.h
 ./snmpd.lo: ../include/net-snmp/library/tools.h
@@ -1842,6 +1852,7 @@
 ./snmp_perl.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmp_perl.lo: ../include/net-snmp/library/snmp.h
 ./snmp_perl.lo: ../include/net-snmp/library/snmp-tc.h
+./snmp_perl.lo: ../include/net-snmp/library/getopt.h
 ./snmp_perl.lo: ../include/net-snmp/utilities.h
 ./snmp_perl.lo: ../include/net-snmp/library/system.h
 ./snmp_perl.lo: ../include/net-snmp/library/tools.h
@@ -1940,6 +1951,7 @@
 ./snmp_vars.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmp_vars.lo: ../include/net-snmp/library/snmp.h
 ./snmp_vars.lo: ../include/net-snmp/library/snmp-tc.h
+./snmp_vars.lo: ../include/net-snmp/library/getopt.h
 ./snmp_vars.lo: ../include/net-snmp/utilities.h
 ./snmp_vars.lo: ../include/net-snmp/library/system.h
 ./snmp_vars.lo: ../include/net-snmp/library/tools.h
@@ -2193,6 +2205,7 @@
 ./helpers/all_helpers.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/all_helpers.lo: ../include/net-snmp/library/snmp.h
 ./helpers/all_helpers.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/all_helpers.lo: ../include/net-snmp/library/getopt.h
 ./helpers/all_helpers.lo: ../include/net-snmp/utilities.h
 ./helpers/all_helpers.lo: ../include/net-snmp/library/system.h
 ./helpers/all_helpers.lo: ../include/net-snmp/library/tools.h
@@ -2293,6 +2306,7 @@
 ./helpers/baby_steps.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/baby_steps.lo: ../include/net-snmp/library/snmp.h
 ./helpers/baby_steps.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/baby_steps.lo: ../include/net-snmp/library/getopt.h
 ./helpers/baby_steps.lo: ../include/net-snmp/utilities.h
 ./helpers/baby_steps.lo: ../include/net-snmp/library/system.h
 ./helpers/baby_steps.lo: ../include/net-snmp/library/tools.h
@@ -2392,6 +2406,7 @@
 ./helpers/bulk_to_next.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/bulk_to_next.lo: ../include/net-snmp/library/snmp.h
 ./helpers/bulk_to_next.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/bulk_to_next.lo: ../include/net-snmp/library/getopt.h
 ./helpers/bulk_to_next.lo: ../include/net-snmp/utilities.h
 ./helpers/bulk_to_next.lo: ../include/net-snmp/library/system.h
 ./helpers/bulk_to_next.lo: ../include/net-snmp/library/tools.h
@@ -2491,6 +2506,7 @@
 ./helpers/cache_handler.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/cache_handler.lo: ../include/net-snmp/library/snmp.h
 ./helpers/cache_handler.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/cache_handler.lo: ../include/net-snmp/library/getopt.h
 ./helpers/cache_handler.lo: ../include/net-snmp/utilities.h
 ./helpers/cache_handler.lo: ../include/net-snmp/library/system.h
 ./helpers/cache_handler.lo: ../include/net-snmp/library/tools.h
@@ -2590,6 +2606,7 @@
 ./helpers/debug_handler.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/debug_handler.lo: ../include/net-snmp/library/snmp.h
 ./helpers/debug_handler.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/debug_handler.lo: ../include/net-snmp/library/getopt.h
 ./helpers/debug_handler.lo: ../include/net-snmp/utilities.h
 ./helpers/debug_handler.lo: ../include/net-snmp/library/system.h
 ./helpers/debug_handler.lo: ../include/net-snmp/library/tools.h
@@ -2689,6 +2706,7 @@
 ./helpers/instance.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/instance.lo: ../include/net-snmp/library/snmp.h
 ./helpers/instance.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/instance.lo: ../include/net-snmp/library/getopt.h
 ./helpers/instance.lo: ../include/net-snmp/utilities.h
 ./helpers/instance.lo: ../include/net-snmp/library/system.h
 ./helpers/instance.lo: ../include/net-snmp/library/tools.h
@@ -2788,6 +2806,7 @@
 ./helpers/mode_end_call.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/mode_end_call.lo: ../include/net-snmp/library/snmp.h
 ./helpers/mode_end_call.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/mode_end_call.lo: ../include/net-snmp/library/getopt.h
 ./helpers/mode_end_call.lo: ../include/net-snmp/utilities.h
 ./helpers/mode_end_call.lo: ../include/net-snmp/library/system.h
 ./helpers/mode_end_call.lo: ../include/net-snmp/library/tools.h
@@ -2887,6 +2906,7 @@
 ./helpers/multiplexer.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/multiplexer.lo: ../include/net-snmp/library/snmp.h
 ./helpers/multiplexer.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/multiplexer.lo: ../include/net-snmp/library/getopt.h
 ./helpers/multiplexer.lo: ../include/net-snmp/utilities.h
 ./helpers/multiplexer.lo: ../include/net-snmp/library/system.h
 ./helpers/multiplexer.lo: ../include/net-snmp/library/tools.h
@@ -2986,6 +3006,7 @@
 ./helpers/null.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/null.lo: ../include/net-snmp/library/snmp.h
 ./helpers/null.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/null.lo: ../include/net-snmp/library/getopt.h
 ./helpers/null.lo: ../include/net-snmp/utilities.h
 ./helpers/null.lo: ../include/net-snmp/library/system.h
 ./helpers/null.lo: ../include/net-snmp/library/tools.h
@@ -3085,6 +3106,7 @@
 ./helpers/old_api.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/old_api.lo: ../include/net-snmp/library/snmp.h
 ./helpers/old_api.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/old_api.lo: ../include/net-snmp/library/getopt.h
 ./helpers/old_api.lo: ../include/net-snmp/utilities.h
 ./helpers/old_api.lo: ../include/net-snmp/library/system.h
 ./helpers/old_api.lo: ../include/net-snmp/library/tools.h
@@ -3185,6 +3207,7 @@
 ./helpers/read_only.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/read_only.lo: ../include/net-snmp/library/snmp.h
 ./helpers/read_only.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/read_only.lo: ../include/net-snmp/library/getopt.h
 ./helpers/read_only.lo: ../include/net-snmp/utilities.h
 ./helpers/read_only.lo: ../include/net-snmp/library/system.h
 ./helpers/read_only.lo: ../include/net-snmp/library/tools.h
@@ -3284,6 +3307,7 @@
 ./helpers/row_merge.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/row_merge.lo: ../include/net-snmp/library/snmp.h
 ./helpers/row_merge.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/row_merge.lo: ../include/net-snmp/library/getopt.h
 ./helpers/row_merge.lo: ../include/net-snmp/utilities.h
 ./helpers/row_merge.lo: ../include/net-snmp/library/system.h
 ./helpers/row_merge.lo: ../include/net-snmp/library/tools.h
@@ -3383,6 +3407,7 @@
 ./helpers/scalar.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/scalar.lo: ../include/net-snmp/library/snmp.h
 ./helpers/scalar.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/scalar.lo: ../include/net-snmp/library/getopt.h
 ./helpers/scalar.lo: ../include/net-snmp/utilities.h
 ./helpers/scalar.lo: ../include/net-snmp/library/system.h
 ./helpers/scalar.lo: ../include/net-snmp/library/tools.h
@@ -3482,6 +3507,7 @@
 ./helpers/scalar_group.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/scalar_group.lo: ../include/net-snmp/library/snmp.h
 ./helpers/scalar_group.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/scalar_group.lo: ../include/net-snmp/library/getopt.h
 ./helpers/scalar_group.lo: ../include/net-snmp/utilities.h
 ./helpers/scalar_group.lo: ../include/net-snmp/library/system.h
 ./helpers/scalar_group.lo: ../include/net-snmp/library/tools.h
@@ -3581,6 +3607,7 @@
 ./helpers/serialize.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/serialize.lo: ../include/net-snmp/library/snmp.h
 ./helpers/serialize.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/serialize.lo: ../include/net-snmp/library/getopt.h
 ./helpers/serialize.lo: ../include/net-snmp/utilities.h
 ./helpers/serialize.lo: ../include/net-snmp/library/system.h
 ./helpers/serialize.lo: ../include/net-snmp/library/tools.h
@@ -3680,6 +3707,7 @@
 ./helpers/stash_cache.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/stash_cache.lo: ../include/net-snmp/library/snmp.h
 ./helpers/stash_cache.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/stash_cache.lo: ../include/net-snmp/library/getopt.h
 ./helpers/stash_cache.lo: ../include/net-snmp/utilities.h
 ./helpers/stash_cache.lo: ../include/net-snmp/library/system.h
 ./helpers/stash_cache.lo: ../include/net-snmp/library/tools.h
@@ -3781,6 +3809,7 @@
 ./helpers/stash_to_next.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/stash_to_next.lo: ../include/net-snmp/library/snmp.h
 ./helpers/stash_to_next.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/stash_to_next.lo: ../include/net-snmp/library/getopt.h
 ./helpers/stash_to_next.lo: ../include/net-snmp/utilities.h
 ./helpers/stash_to_next.lo: ../include/net-snmp/library/system.h
 ./helpers/stash_to_next.lo: ../include/net-snmp/library/tools.h
@@ -3882,6 +3911,7 @@
 ./helpers/table_array.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_array.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_array.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_array.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_array.lo: ../include/net-snmp/utilities.h
 ./helpers/table_array.lo: ../include/net-snmp/library/system.h
 ./helpers/table_array.lo: ../include/net-snmp/library/tools.h
@@ -3981,6 +4011,7 @@
 ./helpers/table.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table.lo: ../include/net-snmp/utilities.h
 ./helpers/table.lo: ../include/net-snmp/library/system.h
 ./helpers/table.lo: ../include/net-snmp/library/tools.h
@@ -4080,6 +4111,7 @@
 ./helpers/table_container.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_container.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_container.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_container.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_container.lo: ../include/net-snmp/utilities.h
 ./helpers/table_container.lo: ../include/net-snmp/library/system.h
 ./helpers/table_container.lo: ../include/net-snmp/library/tools.h
@@ -4179,6 +4211,7 @@
 ./helpers/table_data.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_data.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_data.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_data.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_data.lo: ../include/net-snmp/utilities.h
 ./helpers/table_data.lo: ../include/net-snmp/library/system.h
 ./helpers/table_data.lo: ../include/net-snmp/library/tools.h
@@ -4278,6 +4311,7 @@
 ./helpers/table_dataset.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_dataset.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_dataset.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_dataset.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_dataset.lo: ../include/net-snmp/utilities.h
 ./helpers/table_dataset.lo: ../include/net-snmp/library/system.h
 ./helpers/table_dataset.lo: ../include/net-snmp/library/tools.h
@@ -4377,6 +4411,7 @@
 ./helpers/table_iterator.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_iterator.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_iterator.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_iterator.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_iterator.lo: ../include/net-snmp/utilities.h
 ./helpers/table_iterator.lo: ../include/net-snmp/library/system.h
 ./helpers/table_iterator.lo: ../include/net-snmp/library/tools.h
@@ -4477,6 +4512,7 @@
 ./helpers/table_row.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_row.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_row.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_row.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_row.lo: ../include/net-snmp/utilities.h
 ./helpers/table_row.lo: ../include/net-snmp/library/system.h
 ./helpers/table_row.lo: ../include/net-snmp/library/tools.h
@@ -4576,6 +4612,7 @@
 ./helpers/table_tdata.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/table_tdata.lo: ../include/net-snmp/library/snmp.h
 ./helpers/table_tdata.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/table_tdata.lo: ../include/net-snmp/library/getopt.h
 ./helpers/table_tdata.lo: ../include/net-snmp/utilities.h
 ./helpers/table_tdata.lo: ../include/net-snmp/library/system.h
 ./helpers/table_tdata.lo: ../include/net-snmp/library/tools.h
@@ -4675,6 +4712,7 @@
 ./helpers/watcher.lo: ../include/net-snmp/library/snmp_impl.h
 ./helpers/watcher.lo: ../include/net-snmp/library/snmp.h
 ./helpers/watcher.lo: ../include/net-snmp/library/snmp-tc.h
+./helpers/watcher.lo: ../include/net-snmp/library/getopt.h
 ./helpers/watcher.lo: ../include/net-snmp/utilities.h
 ./helpers/watcher.lo: ../include/net-snmp/library/system.h
 ./helpers/watcher.lo: ../include/net-snmp/library/tools.h
@@ -4774,6 +4812,7 @@
 ./mibgroup/header_complex.lo: ../include/net-snmp/library/snmp_impl.h
 ./mibgroup/header_complex.lo: ../include/net-snmp/library/snmp.h
 ./mibgroup/header_complex.lo: ../include/net-snmp/library/snmp-tc.h
+./mibgroup/header_complex.lo: ../include/net-snmp/library/getopt.h
 ./mibgroup/header_complex.lo: ../include/net-snmp/utilities.h
 ./mibgroup/header_complex.lo: ../include/net-snmp/library/system.h
 ./mibgroup/header_complex.lo: ../include/net-snmp/library/tools.h
@@ -4875,6 +4914,7 @@
 ./mibgroup/testhandler.lo: ../include/net-snmp/library/snmp_impl.h
 ./mibgroup/testhandler.lo: ../include/net-snmp/library/snmp.h
 ./mibgroup/testhandler.lo: ../include/net-snmp/library/snmp-tc.h
+./mibgroup/testhandler.lo: ../include/net-snmp/library/getopt.h
 ./mibgroup/testhandler.lo: ../include/net-snmp/utilities.h
 ./mibgroup/testhandler.lo: ../include/net-snmp/library/system.h
 ./mibgroup/testhandler.lo: ../include/net-snmp/library/tools.h
@@ -4975,6 +5015,7 @@
 ./mibgroup/util_funcs.lo: ../include/net-snmp/library/snmp_impl.h
 ./mibgroup/util_funcs.lo: ../include/net-snmp/library/snmp.h
 ./mibgroup/util_funcs.lo: ../include/net-snmp/library/snmp-tc.h
+./mibgroup/util_funcs.lo: ../include/net-snmp/library/getopt.h
 ./mibgroup/util_funcs.lo: ../include/net-snmp/utilities.h
 ./mibgroup/util_funcs.lo: ../include/net-snmp/library/system.h
 ./mibgroup/util_funcs.lo: ../include/net-snmp/library/tools.h
