--- a/apps/Makefile.depend
+++ b/apps/Makefile.depend
@@ -33,6 +33,7 @@
 ./encode_keychange.lo: ../include/net-snmp/library/snmp_impl.h
 ./encode_keychange.lo: ../include/net-snmp/library/snmp.h
 ./encode_keychange.lo: ../include/net-snmp/library/snmp-tc.h
+./encode_keychange.lo: ../include/net-snmp/library/getopt.h
 ./encode_keychange.lo: ../include/net-snmp/utilities.h
 ./encode_keychange.lo: ../include/net-snmp/library/system.h
 ./encode_keychange.lo: ../include/net-snmp/library/tools.h
@@ -117,6 +118,7 @@
 ./snmpbulkget.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpbulkget.lo: ../include/net-snmp/version.h 
 ./snmpbulkget.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpbulkget.lo: ../include/net-snmp/library/getopt.h
 ./snmpbulkget.lo: ../include/net-snmp/config_api.h
 ./snmpbulkget.lo: ../include/net-snmp/library/read_config.h
 ./snmpbulkget.lo: ../include/net-snmp/library/default_store.h
@@ -167,6 +169,7 @@
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpbulkwalk.lo: ../include/net-snmp/library/getopt.h
 ./snmpbulkwalk.lo: ../include/net-snmp/utilities.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/system.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/tools.h
@@ -233,6 +236,7 @@
 ./snmpdelta.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpdelta.lo: ../include/net-snmp/library/getopt.h
 ./snmpdelta.lo: ../include/net-snmp/utilities.h
 ./snmpdelta.lo: ../include/net-snmp/library/system.h
 ./snmpdelta.lo: ../include/net-snmp/library/tools.h
@@ -297,6 +301,7 @@
 ./snmpdf.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpdf.lo: ../include/net-snmp/library/snmp.h
 ./snmpdf.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpdf.lo: ../include/net-snmp/library/getopt.h
 ./snmpdf.lo: ../include/net-snmp/utilities.h
 ./snmpdf.lo: ../include/net-snmp/library/system.h
 ./snmpdf.lo: ../include/net-snmp/library/tools.h
@@ -378,6 +383,7 @@
 ./snmpget.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpget.lo: ../include/net-snmp/version.h
 ./snmpget.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpget.lo: ../include/net-snmp/library/getopt.h
 ./snmpget.lo: ../include/net-snmp/config_api.h
 ./snmpget.lo: ../include/net-snmp/library/read_config.h
 ./snmpget.lo: ../include/net-snmp/library/default_store.h
@@ -428,6 +434,7 @@
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpgetnext.lo: ../include/net-snmp/library/getopt.h
 ./snmpgetnext.lo: ../include/net-snmp/utilities.h
 ./snmpgetnext.lo: ../include/net-snmp/library/system.h
 ./snmpgetnext.lo: ../include/net-snmp/library/tools.h
@@ -493,6 +500,7 @@
 ./snmpset.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpset.lo: ../include/net-snmp/library/snmp.h
 ./snmpset.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpset.lo: ../include/net-snmp/library/getopt.h
 ./snmpset.lo: ../include/net-snmp/utilities.h
 ./snmpset.lo: ../include/net-snmp/library/system.h
 ./snmpset.lo: ../include/net-snmp/library/tools.h
@@ -575,6 +583,7 @@
 ./snmpstatus.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpstatus.lo: ../include/net-snmp/version.h
 ./snmpstatus.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpstatus.lo: ../include/net-snmp/library/getopt.h
 ./snmpstatus.lo: ../include/net-snmp/config_api.h
 ./snmpstatus.lo: ../include/net-snmp/library/read_config.h
 ./snmpstatus.lo: ../include/net-snmp/library/default_store.h
@@ -624,6 +633,7 @@
 ./snmptable.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptable.lo: ../include/net-snmp/library/snmp.h
 ./snmptable.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptable.lo: ../include/net-snmp/library/getopt.h
 ./snmptable.lo: ../include/net-snmp/utilities.h
 ./snmptable.lo: ../include/net-snmp/library/system.h
 ./snmptable.lo: ../include/net-snmp/library/tools.h
@@ -690,6 +700,7 @@
 ./snmptest.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptest.lo: ../include/net-snmp/library/snmp.h
 ./snmptest.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptest.lo: ../include/net-snmp/library/getopt.h
 ./snmptest.lo: ../include/net-snmp/utilities.h
 ./snmptest.lo: ../include/net-snmp/library/system.h
 ./snmptest.lo: ../include/net-snmp/library/tools.h
@@ -812,6 +823,7 @@
 ./snmptrap.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrap.lo: ../include/net-snmp/library/snmp.h
 ./snmptrap.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrap.lo: ../include/net-snmp/library/getopt.h
 ./snmptrap.lo: ../include/net-snmp/utilities.h
 ./snmptrap.lo: ../include/net-snmp/library/system.h
 ./snmptrap.lo: ../include/net-snmp/library/tools.h
@@ -878,6 +890,7 @@
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd_auth.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_auth.lo: ../include/net-snmp/utilities.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/system.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/tools.h
@@ -949,6 +962,7 @@
 ./snmptrapd.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd.lo: ../include/net-snmp/utilities.h
 ./snmptrapd.lo: ../include/net-snmp/library/system.h
 ./snmptrapd.lo: ../include/net-snmp/library/tools.h
@@ -1021,7 +1035,7 @@
 ./snmptrapd.lo: ../include/net-snmp/agent/mfd.h snmptrapd_handlers.h
 ./snmptrapd.lo: snmptrapd_log.h snmptrapd_ds.h snmptrapd_auth.h
 ./snmptrapd.lo: ../agent/mibgroup/notification-log-mib/notification_log.h
-./snmptrapd.lo: ../agent/mibgroup/mibII/vacm_conf.h
+./snmptrapd.lo: ../agent/mibgroup/mibII/vacm_conf.h ../agent/snmp_perl.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/net-snmp-config.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/system/linux.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/system/sysv.h
@@ -1080,6 +1094,7 @@
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/version.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/net-snmp-includes.h
+./snmptrapd_handlers.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/snmpv3_api.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/snmpv3.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/transform_oids.h
@@ -1162,6 +1177,7 @@
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd_log.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_log.lo: ../include/net-snmp/utilities.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/system.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/tools.h
@@ -1233,6 +1249,7 @@
 ./snmpusm.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpusm.lo: ../include/net-snmp/library/snmp.h
 ./snmpusm.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpusm.lo: ../include/net-snmp/library/getopt.h
 ./snmpusm.lo: ../include/net-snmp/utilities.h
 ./snmpusm.lo: ../include/net-snmp/library/system.h
 ./snmpusm.lo: ../include/net-snmp/library/tools.h
@@ -1298,6 +1315,7 @@
 ./snmpvacm.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpvacm.lo: ../include/net-snmp/library/snmp.h
 ./snmpvacm.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpvacm.lo: ../include/net-snmp/library/getopt.h
 ./snmpvacm.lo: ../include/net-snmp/utilities.h
 ./snmpvacm.lo: ../include/net-snmp/library/system.h
 ./snmpvacm.lo: ../include/net-snmp/library/tools.h
@@ -1363,6 +1381,7 @@
 ./snmpwalk.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpwalk.lo: ../include/net-snmp/library/snmp.h
 ./snmpwalk.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpwalk.lo: ../include/net-snmp/library/getopt.h
 ./snmpwalk.lo: ../include/net-snmp/utilities.h
 ./snmpwalk.lo: ../include/net-snmp/library/system.h
 ./snmpwalk.lo: ../include/net-snmp/library/tools.h
@@ -1434,6 +1453,7 @@
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/if.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/if.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/tools.h
@@ -1503,6 +1523,7 @@
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/inet6.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/tools.h
@@ -1571,6 +1592,7 @@
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/inet.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/tools.h
@@ -1639,6 +1661,7 @@
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/main.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/main.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/tools.h
@@ -1707,6 +1730,7 @@
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/route.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/route.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/tools.h
@@ -1775,6 +1799,7 @@
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/winstub.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/tools.h
