--- a/net-snmp-config.in
+++ b/net-snmp-config.in
@@ -546,7 +546,7 @@ main (int argc, char **argv)
         exit(1);
     }
 
-+#if HAVE_GETPID
+#if HAVE_GETPID
     if (pid_file != NULL) {
       /*
        * unlink the pid_file, if it exists, prior to open.  Without
